# cvf2

./: CMakeLists.txt  CMakePresets.json  README.md  ffdef.h
BFC/: argv.cpp  argv.h  bfstream.h  commands.h  def.h  netcall.h  portable_std.cpp  src.cpp
BFC/RudeSocket/: list.txt  socket.cpp  socket.h  socket_comm_normal.cpp  socket_platform.h  socket_tcpclient.h  src.cpp
CVRender/: _cvmodel_assimp.h  cvrbase.h  cvrender.h  cvrmodel.cpp  cvrmodel.h  dllmain.cpp  src.cpp
CVX/: bfsio.h  cc.h  codec.cpp  codec.h  core.h  gui.cpp  gui.h  imgset.cpp
Python/: __init__.py
Python/xbase/: netcall.py
test1/: appstd.h  main.cpp  srcCVF.cpp  srcCVRender.cpp  srcRudeSocket.cpp  test_all.cpp  test_cvrender.hpp  test_netcall.hpp  test_netcall_reloc.hpp
test1/del/: tools_calib_camera.cpp  tools_render.cpp
